Fix spacing in footer.

--- a/style/logged_in.css
+++ b/style/logged_in.css
@@ -41,5 +41,6 @@
   	position: relative;
   	padding-top: 40px;
   	padding-bottom: 0;
+  	border-bottom: 1px solid #000000;
   }
 }
